--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     
             </div>
             <div class="copyright-container">
-                <button id="copyright-button" onclick="toggleLicense()">Quiz basé sur le code de Sulaimon Olaniran, clickez sur ce message pour voir la license.</button>
+                <button id="copyright-button" onclick="toggleLicense()">Quiz basé sur le code de Sulaimon Olaniran, clickez sur ce message pour voir la licence.</button>
                 <div id="copyright-text" style="display: none;">
                     The MIT License (MIT)<br/>
                     
