--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <header>
-        <title>Quizzy</title>
+        <title>Quiz – Blog J41-7</title>
         <link rel="stylesheet" href="style.css"/>
     </header>
     <body onload="load()">
