--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <header>
         <title>Quiz – Blog J41-7</title>
         <link rel="stylesheet" href="style.css"/>
+        <link rel="icon" href="/icon.png" sizes="192x192" />
     </header>
     <body onload="load()">
         <main>
