--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                   
                     <div class="modal-button-container">
                         <button onclick="closeScoreModal()">Continuer</button>
+                        <button class="styled back" onclick="window.history.back();">Revenir sur le blog</button>
                     </div>
                   
                 </div>
